--- a/developing/index.html
+++ b/developing/index.html
@@ -1031,7 +1031,7 @@
 format your code using <code>clang-format</code>, according to the style set up in <code>/.clang-format</code>.</p>
 <ul>
 <li>
-<p>In VS Code with the official C/C++ extension, just use <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>F</kbd> to reformat;</p>
+<p>In VS Code with the official C/C++ extension, just use <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>I</kbd> to reformat;</p>
 </li>
 <li>
 <p>To format all files within the (project) directory, use</p>
